konst/tests/misc_tests/array_macros2_ui_tests/non_local_return_from_fn_err.rs
#[allow(unreachable_code)]
const _: [usize; 1] = 'out: {
    konst::array::from_fn_!(|i| break 'out [i * 2])
};


fn main() {}